# MyKanBan

./: README.md  idea.erd  kanpilot.toml
_build/: log
project1/: dune-project  project1.opam
project1/_build/: .db  .digest-db  .to-delete-in-source-tree  log
project1/_build/default/: project1.dune-package  project1.install
project1/_build/default/.dune/: configurator  configurator.v2
project1/_build/default/.ppx/3aba1eda4deeeb3e7ff190bda4b5a4ad/: dune__exe___ppx.cmi  dune__exe___ppx.cmo  dune__exe___ppx.cmx
project1/_build/default/.ppx/bcab0be011c28261c514e69f4fe141f8/: dune__exe___ppx.cmo  dune__exe___ppx.cmx
project1/_build/default/lib/: project1.cma  project1.cmxs
project1/_build/default/lib/.merlin-conf/: lib-project1
project1/_build/default/lib/.project1.objs/byte/: project1.cmo  project1.cmt
project1/_build/default/test/.merlin-conf/: exe-test_project1
project1/_build/default/test/.test_project1.eobjs/byte/: dune__exe__Test_project1.cmi  dune__exe__Test_project1.cmti
project1/_build/default/test/.test_project1.eobjs/native/: dune__exe__Test_project1.cmx
project1/_build/install/default/share/project1/: create_task.html  delete_task.html  styles.css  update_task.html
