(lang dune 3.16)

(name project1)

(generate_opam_files true)

(source
 (github DanaCavanagh/Project_1_431))

(authors "Joel Rivera" "Connor George" "Dana Cavanagh")

(maintainers "N/A")


(package
 (name project1)
 (synopsis "A KanBan board web application")
 (description "A KanBan board web application made using the Opium web framework.")
 (depends ocaml dune opium lwt yojson ppx_deriving_yojson))

